# hello-django

./: .gitignore  pyproject.toml
django_poetry_example/: settings.py
pkgs/django-poetry-example/: default.nix
pkgs/django-shell/: default.nix
