[tool.poetry]
name = "django_poetry_example"
version = "0.1.0"
description = ""
authors = ["Sam Rose <sam@floxdev.com>"]
readme = "README.md"
packages = [{include = "django_poetry_example"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
